# functional_raytracing

./: README.md  functional-raytracing.cabal  scene.json
app/: Config.hs  Input.hs  Main.hs  Math.hs  Render.hs  Test.hs
