cabal-version:      3.0
name:               functional-raytracing
version:            0.1.0.0
author:             Filip Kopyt
maintainer:         filipkopyt14@gmail.com
build-type:         Simple


common warnings
    ghc-options: -Wall

common buildflags
    ghc-options:
        -O2
        -fno-liberate-case
        -fllvm
        -threaded
        -optlo-O3
        -optlo-mcpu=native
        -optlc-O3
        -optlc-mcpu=native

library
    import: 
        warnings,
        buildflags

    exposed-modules:
        Math,
        Config,
        Input,
        Render

    build-depends:
        base >=4.18.3.0,
        JuicyPixels,
        random,
        hashable,
        parallel,
        repa,
        filepath,
        aeson,
        bytestring,

    hs-source-dirs: app
    default-language: GHC2021

executable functional-raytracing
    import: 
        warnings,
        buildflags

    main-is: app/Main.hs

    build-depends:
        base >= 4.18.3.0,
        functional-raytracing,
        repa,
        filepath,
        JuicyPixels

    ghc-options: -rtsopts
    default-language: GHC2021

test-suite tests
    import: 
        warnings,
        buildflags

    type: exitcode-stdio-1.0
    main-is: app/Test.hs

    build-depends:
        base >=4.18.3.0,
        functional-raytracing,
        HUnit,
        bytestring,
        aeson,
        temporary

    default-language: GHC2021
